Refactoring to hvi_toolkit

--- a/examples/check_dataset.ipynb
+++ b/examples/check_dataset.ipynb
@@ -6,19 +6,10 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sebie/anaconda3/envs/biotrainer/lib/python3.8/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.2\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from bias_eval.dataset_base_classes import DatasetHVIStandardized\n",
-    "from bias_eval.evaluators import DatasetEvaluator"
+    "from hvi_toolkit.dataset_base_classes import DatasetHVIStandardized\n",
+    "from hvi_toolkit.evaluators import DatasetEvaluator"
    ]
   },
   {
@@ -111,7 +102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/sebie/PycharmProjects/hvi_bias_eval/bias_eval/dataset_base_classes/hvi_abstract_dataset.py:43: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/home/sebie/PycharmProjects/hvi_bias_eval/hvi_toolkit/dataset_base_classes/hvi_abstract_dataset.py:43: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  self.data_frame: pd.DataFrame = pd.read_csv(file_path, sep=self.delimiter, header=self.header)\n"
      ]
     }
