--- a/examples/check_model.ipynb
+++ b/examples/check_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -13,14 +13,14 @@
     "\n",
     "from biotrainer.inference import Inferencer\n",
     "from biotrainer.utilities import INTERACTION_INDICATOR\n",
-    "from bias_eval.evaluators import ModelEvaluator, ModelWrapperBiotrainer\n",
+    "from hvi_toolkit.evaluators import ModelEvaluator, ModelWrapperBiotrainer\n",
     "\n",
-    "from bias_eval.interaction_datasets import DatasetRabiesLyssavirusExperimental"
+    "from hvi_toolkit.interaction_datasets import DatasetRabiesLyssavirusExperimental"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# Create wrapper object\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# Get benchmarks (Work in progress)\n",
@@ -81,22 +81,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "# 1. Rabies Lyssavirus experimental interactions\n",
     "# Load all human protein embeddings\n",
     "# (downloaded from https://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/embeddings/UP000005640_9606/per-protein.h5)\n",
-    "human_embeddings_path = \"../rabies_lyssavirus_predictions/data/human_per_protein_uniprot.h5\"\n",
+    "human_embeddings_path = \"../interactome_predictions/rabies_lyssavirus/data/human_per_protein_uniprot.h5\"\n",
     "human_embeddings_file = h5py.File(human_embeddings_path, 'r')\n",
     "id2emb_human = {idx: np.array(embedding) for (idx, embedding) in human_embeddings_file.items()}\n",
     "# Load rabies lyssa embeddings\n",
     "# (extracted from https://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/embeddings/uniprot_sprot/per-protein.h5)\n",
-    "lyssa_embeddings_path = \"../rabies_lyssavirus_predictions/data/rabies_lyssa_per_protein_uniprot.h5\"\n",
+    "lyssa_embeddings_path = \"../interactome_predictions/rabies_lyssavirus/data/rabies_lyssa_per_protein_uniprot.h5\"\n",
     "lyssa_embeddings_file = h5py.File(lyssa_embeddings_path, 'r')\n",
     "id2emb_lyssa = {idx: np.array(embedding) for (idx, embedding) in lyssa_embeddings_file.items()}\n",
     "# Load experimental interactions\n",
-    "rabies_lyssa_experimental_interactions = DatasetRabiesLyssavirusExperimental(file_path=\"../rabies_lyssavirus_predictions/lyssa_experimental_interactions.csv\")\n",
+    "rabies_lyssa_experimental_interactions = DatasetRabiesLyssavirusExperimental(file_path=\"../hvi_datasets/raw_data/rabies_lyssavirus_zandi/lyssa_experimental_interactions.csv\")\n",
     "rabies_lyssa_experimental_interactions = rabies_lyssa_experimental_interactions.to_standardized_dataset(taxonomy=None)\n",
     "rabies_lyssa_experimental_interactions_list = rabies_lyssa_experimental_interactions.to_interaction_list()\n",
     "# Create interactions: Concatenate human and viral embeddings (human_vector ++ viral_vector), len = 2048\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# 2. Negatome benchmark\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "model_evaluator = ModelEvaluator()"
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
