--- a/hvi_datasets/merged_dataset/merge_datasets.ipynb
+++ b/hvi_datasets/merged_dataset/merge_datasets.ipynb
@@ -13,8 +13,8 @@
     "dir1 = os.path.dirname(dir2)\n",
     "if not dir1 in sys.path: sys.path.append(dir1)\n",
     "\n",
-    "from bias_eval.taxonomy import Taxonomy\n",
-    "from bias_eval.interaction_datasets import DatasetHVIDB, DatasetHPIDBVirus, DatasetIntactPositive, DatasetVirusMentha, DatasetVirHostNet3, DatasetVirusesString, DatasetSarsCov2IM28880, DatasetTsukiyamaNegatives"
+    "from hvi_toolkit.taxonomy import Taxonomy\n",
+    "from hvi_toolkit.interaction_datasets import DatasetHVIDB, DatasetHPIDBVirus, DatasetIntactPositive, DatasetVirusMentha, DatasetVirHostNet3, DatasetVirusesString, DatasetSarsCov2IM28880, DatasetTsukiyamaNegatives"
    ]
   },
   {
